syntax = "proto3";
package canine_chain.filetree;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "canine_chain/filetree/params.proto";
import "canine_chain/filetree/files.proto";
import "canine_chain/filetree/pubkey.proto";

option go_package = "github.com/jackalLabs/canine-chain/x/filetree/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/jackal/canine/filetree/params";
  }

  // Queries a Files by index.
  rpc File(QueryFileRequest) returns (QueryFileResponse) {
    option (google.api.http).get =
        "/jackal/canine-chain/filetree/files/{address}/{owner_address}";
  }

  // Queries a list of Files items.
  rpc AllFiles(QueryAllFilesRequest) returns (QueryAllFilesResponse) {
    option (google.api.http).get = "/jackal/canine-chain/filetree/files";
  }

  // Queries a Pubkey by index.
  rpc PubKey(QueryPubKeyRequest) returns (QueryPubKeyResponse) {
    option (google.api.http).get =
        "/jackal/canine-chain/filetree/pubkeys/{address}";
  }

  // Queries a list of Pubkey items.
  rpc AllPubKeys(QueryAllPubKeysRequest) returns (QueryAllPubKeysResponse) {
    option (google.api.http).get = "/jackal/canine-chain/filetree/pubkeys";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryFileRequest {
  string address = 1;
  string owner_address = 2;
}

message QueryFileResponse { Files file = 1 [ (gogoproto.nullable) = false ]; }

message QueryAllFilesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllFilesResponse {
  repeated Files files = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryPubKeyRequest { string address = 1; }

message QueryPubKeyResponse {
  Pubkey pub_key = 1 [ (gogoproto.nullable) = false ];
}

message QueryAllPubKeysRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPubKeysResponse {
  repeated Pubkey pub_key = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
