syntax = "proto3";
package canine_chain.storage;

option go_package = "github.com/jackalLabs/canine-chain/x/storage/types";

message ActiveDeals {
  string cid = 1;
  string signee = 2;
  string provider = 3;
  string startblock = 4;
  string endblock = 5;
  string filesize = 6;
  string proofverified = 7;
  string proofsmissed = 8;
  string blocktoprove = 9;
  string creator = 10;
  string merkle = 11;
  string fid = 12;
}

message UFID {
  bytes hash = 1;
}

message UniversalFile {
  UFID id = 1;
  map<string, FileProof> proofs = 2;
  int64 file_size = 3;
  int64 start = 4;
  int64 expires = 5;
  string owner = 6;
  int64 proof_interval = 7;
  bytes merkle = 8;
  int64 proof_type = 9;
}

message FileProof {
  string prover = 1;
  UFID id = 2;
  int64 last_proven = 3;
  int64 chunk_to_prove = 4;
}